--- a/storage/themes/riddelphotographers/assets/scss/_animations.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_animations.scss
@@ -66,6 +66,25 @@
 	animation-fill-mode: both;
 }
 
+@keyframes fadeOutDown {
+
+	from {
+		opacity: 1;
+	}
+
+	to {
+		opacity: 0;
+		transform: translate3d(0, 100%, 0);
+	}
+
+}
+
+@mixin fadeOutDown {
+	animation-name: fadeOutDown;
+  	animation-duration: 1s;
+	animation-fill-mode: both;
+}
+
 @keyframes moveInUp {
 
 	from {
