--- a/storage/themes/riddelphotographers/assets/css/app.css
+++ b/storage/themes/riddelphotographers/assets/css/app.css
@@ -4339,7 +4339,8 @@ select:focus {
   position: absolute;
   left: 0;
   top: 0;
-  z-index: -1; }
+  z-index: -1;
+  background-attachment: fixed; }
 
 .main-title,
 .gallery-container {
