--- a/storage/themes/riddelphotographers/assets/scss/_home-page.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_home-page.scss
@@ -15,6 +15,11 @@
 	top: 0;
 	z-index: -1;
 	background-attachment: fixed;
+
+	@include breakpoint(medium down) {
+		background-attachment: scroll;
+	}
+
 }
 
 .main-title,
