updated media queries

--- a/storage/themes/riddelphotographers/assets/css/app.css
+++ b/storage/themes/riddelphotographers/assets/css/app.css
@@ -4062,7 +4062,7 @@ select:focus {
       max-width: initial;
       width: 37.5rem;
       left: 40.5%; } }
-  @media screen and (min-width: 0em) and (max-width: 39.9375em) and (orientation: landscape) {
+  @media screen and (max-width: 39.9375em) and (orientation: landscape) {
     .main-logo {
       width: 25rem; } }
   @media screen and (min-width: 40em) and (max-width: 63.9375em) and (orientation: portrait) {
@@ -4178,7 +4178,7 @@ select:focus {
           transform: translateX(-50%);
   width: 3.75rem;
   height: 1.5625rem; }
-  @media screen and (min-width: 0em) and (max-width: 39.9375em) and (orientation: landscape) {
+  @media screen and (max-width: 39.9375em) and (orientation: landscape) {
     .scroll-down-container {
       top: 0; } }
 
@@ -4263,7 +4263,7 @@ select:focus {
   padding-bottom: 3rem;
   position: relative;
   height: 21.875rem; }
-  @media screen and (min-width: 0em) and (max-width: 39.9375em) and (orientation: landscape) {
+  @media screen and (max-width: 39.9375em) and (orientation: landscape) {
     .page-header {
       height: 15.625rem; } }
   .page-header .main-logo {
@@ -4275,7 +4275,7 @@ select:focus {
         max-width: initial;
         width: 18.75rem;
         left: 40.5%; } }
-    @media screen and (min-width: 0em) and (max-width: 39.9375em) and (orientation: landscape) {
+    @media screen and (max-width: 39.9375em) and (orientation: landscape) {
       .page-header .main-logo {
         width: 25rem; } }
     @media screen and (min-width: 40em) and (max-width: 63.9375em) {
@@ -4467,7 +4467,7 @@ select:focus {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%); }
-  @media screen and (min-width: 0em) and (max-width: 39.9375em) and (orientation: portrait) {
+  @media screen and (max-width: 39.9375em) and (orientation: portrait) {
     .gallery-page-header {
       margin-top: 0; } }
 
