--- a/storage/themes/riddelphotographers/assets/scss/_slick-theme.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_slick-theme.scss
@@ -88,7 +88,7 @@ $slick-opacity-not-active: 0.25 !default;
     }
     
     &.slick-disabled {
-        display: none !important;
+        @extend .hide;
     }
 
 }
