added width and height attributes to logo

--- a/storage/themes/riddelphotographers/partials/login-header.html
+++ b/storage/themes/riddelphotographers/partials/login-header.html
@@ -21,6 +21,6 @@
 		<koken:include file="partials/svg.html" />
 		<header class="login-header">
 			<koken:link to="front" title="{{ labels.home.singular }}" class="logo-link">
-				<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" />
+				<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
 	        </koken:link>
 		</header>
