--- a/storage/themes/riddelphotographers/partials/main-header.html
+++ b/storage/themes/riddelphotographers/partials/main-header.html
@@ -30,7 +30,7 @@
               <koken:link to="front" title="{{ labels.home.singular }}" class="">
                 <h1 itemprop="headline">
                   {{ site.title }}
-                  <koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" />
+                  <koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
                 </h1>
               </koken:link>
               <koken:include file="partials/navigation.html" />
