--- a/storage/themes/riddelphotographers/partials/page-header.html
+++ b/storage/themes/riddelphotographers/partials/page-header.html
@@ -31,7 +31,7 @@
 								<koken:link to="front" title="{{ labels.home.singular }}" class="logo-link">
 									<h1 itemprop="headline">
 										{{ site.title }}
-										<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" />
+										<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
 									</h1>
 						        </koken:link>
 							</div>
