added page effect

--- a/storage/themes/riddelphotographers/partials/login-header.html
+++ b/storage/themes/riddelphotographers/partials/login-header.html
@@ -17,7 +17,7 @@
 		<koken:title />
 		<koken:asset file="assets/css/app.css" />
 	</head>
-	<body class="login">
+	<body class="login animsition">
 		<koken:include file="partials/svg.html" />
 		<header class="login-header">
 			<koken:link to="front" title="{{ labels.home.singular }}" class="logo-link">
