got rid of scrollbar in ie

--- a/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
@@ -65,6 +65,10 @@ svg {
 	left: -9999px;
 }
 
+.off-canvas-wrapper {
+	-ms-overflow-style: none;
+}
+
 .off-canvas-content {
 	background: inherit;
 }
