improved anchor style compatibility with ie

--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -128,7 +128,7 @@
 				border-top: 1px solid $anchor-color-hover;
 				background: transparent;
 				transition-delay: $transition-time;
-				transform: translateY( calc(100% - 2px) );
+				transform: translateY( 95% );
 			}
 
 			&:after {
