--- a/storage/themes/riddelphotographers/partials/footer.html
+++ b/storage/themes/riddelphotographers/partials/footer.html
@@ -1,18 +1,3 @@
-          <footer class="main-footer" itemscope itemtype="http://schema.org/WPFooter">
-            <p>{{ site.copyright }}</p>
-            <nav class="footer-nav">
-              <koken:navigation group="footer" class="menu" />
-            </nav>
-            <div class="scroll-up-container">
-              <a class="scroll-up" href="#top">
-                <svg class="icon icon-scroll-down"><use xlink:href="#icon-scroll-down"></use></svg>
-              </a>
-            </div>
-          </footer>
-        </div>
-      </div>
-    </div>
-    <koken:asset file="assets/js/min/app-min.js" />
-    <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
+<koken:include file="partials/main-footer.html" />
   </body>
 </html>
