--- a/storage/themes/riddelphotographers/partials/page-header.html
+++ b/storage/themes/riddelphotographers/partials/page-header.html
@@ -24,7 +24,7 @@
     	<div id="top" class="off-canvas-wrapper animsition">
 	      	<div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 	    		<koken:include file="partials/side-navigation.html" />
-				<div class="off-canvas-content gallery-page-header-background" data-off-canvas-content>
+				<div class="off-canvas-content page-title-background" data-off-canvas-content>
 					<header class="main-page-header" itemscope itemtype="http://schema.org/WPHeader">
 						<div class="top-navigation">
 							<div class="top-navigation-left">
