--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -1,13 +1,9 @@
 // general page styles
 
-.page-title-background {
-
-}
-
 .page-title-container {
 	text-align: center;
-	background-image: url('#{$asset-path}/images/splatter.png');
-	background-position: center 50%;
+	background-image: url(#{$asset-path}/images/splatter.png);
+	background-position: center;
 	background-repeat: no-repeat;
 	background-size: rem-calc(275);
 
@@ -227,12 +223,12 @@
 
 .split-box-left {
 
-	.row-split {
-		float: right;
-	}
-
 	@include breakpoint(small only) {
 		height: auto;
+	}
+
+	.row-split {
+		float: right;
 	}
 
 }
@@ -251,11 +247,6 @@
 	.bg-overlay {
 		background: 
 	  		linear-gradient(to right, rgba($black, 0.3) 0%, rgba($black, 0.3) 100%);
-	  	position: absolute;
-		width: 100%;
-		height: 100%;
-		left: 0;
-		top: 0;
 		z-index: -1;
 	}
 
@@ -304,7 +295,7 @@
 .login {
 	overflow-x: hidden;
 	height: auto;
-	background: url(../images/login-page.jpg) center no-repeat;
+	background: url(#{$asset-path}/images/login-page.jpg) center no-repeat;
 	background-size: cover;
 }
 
