made hamburger icon thinner; added blur to elements that had absolute centering

--- a/storage/themes/riddelphotographers/assets/scss/_animations.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_animations.scss
@@ -124,3 +124,13 @@
 	animation-duration: 2s;
 	animation-fill-mode: both;
 }
+
+.flash {
+	display: inline;
+	@include flash;
+	@include loop;
+}
+
+.moveInUp {
+	@include moveInUp;
+}
