--- a/storage/themes/riddelphotographers/assets/scss/_home-page.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_home-page.scss
@@ -34,6 +34,7 @@
 
 .main-title {
 	@include vertical-center;
+	filter: blur(0);
 	width: 100%;
 	background: rgba($white, 0.4);
 	text-align: right;
