decided to enable on tablets

--- a/storage/themes/riddelphotographers/assets/scss/_home-page.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_home-page.scss
@@ -16,7 +16,7 @@
 	z-index: -999;
 	background-attachment: fixed;
 
-	@include breakpoint(medium down) {
+	@include breakpoint(small down) {
 		background-attachment: scroll;
 	}
 
