cleanup of css; changed from font: 0 to visual-hide for image titles

--- a/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
@@ -57,8 +57,13 @@ svg {
 
 .visual-hide {
 	position: absolute;
-	top: -9999px;
-	left: -9999px;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	padding: 0;
+	border: 0;
 }
 
 .off-canvas-wrapper {
