--- a/storage/themes/riddelphotographers/partials/page-header.html
+++ b/storage/themes/riddelphotographers/partials/page-header.html
@@ -30,7 +30,7 @@
 							<div class="top-navigation-left">
 								<koken:link to="front" title="{{ labels.home.singular }}" class="logo-link">
 									<h1 itemprop="headline">
-										{{ site.title }}
+										<span class="visual-hide">{{ site.title }}</span>
 										<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
 									</h1>
 						        </koken:link>
