--- a/storage/themes/riddelphotographers/assets/css/app.css
+++ b/storage/themes/riddelphotographers/assets/css/app.css
@@ -2959,10 +2959,10 @@ select:focus {
     margin-top: 1.5625rem; }
 
 .login-header {
-  margin-top: 3.75rem;
+  padding-top: 3.75rem;
   position: relative; }
   .login-header .logo-link:before, .login-header .logo-link:after {
-    top: 48%;
+    top: 60%;
     left: 50.1%; }
   .login-header .logo-link:before {
     width: 16.875rem;
@@ -3362,12 +3362,11 @@ img.k-lazy-loading {
 
 .login {
   overflow-x: hidden;
-  height: auto;
   background: url(../images/login-page.jpg) center no-repeat;
   background-size: cover; }
 
 .login-form {
-  margin-top: 3.75rem;
+  margin: 3.75rem 0;
   background-color: rgba(254, 254, 254, 0.7);
   padding: 0.9375rem;
   text-align: center;
@@ -3377,7 +3376,7 @@ img.k-lazy-loading {
     padding: 0; }
 
 .bg-overlay {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   left: 0;
