--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -289,13 +289,14 @@
 
 .login {
 	overflow-x: hidden;
-	height: auto;
+	// height: auto;
+	// position: relative;
 	background: url(#{$asset-path}/images/login-page.jpg) center no-repeat;
 	background-size: cover;
 }
 
 .login-form {
-	margin-top: rem-calc(60);
+	margin: rem-calc(60 0);
 	background-color: rgba($white, 0.7);
 	padding: rem-calc($grid-column-gutter / 2);
 	text-align: center;
@@ -309,7 +310,7 @@
 }
 
 .bg-overlay {
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 100%;
 	left: 0;
