--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -243,6 +243,7 @@
 	.bg-overlay {
 		background: 
 	  		linear-gradient(to right, rgba($black, 0.3) 0%, rgba($black, 0.3) 100%);
+	  	position: absolute;
 	}
 
 }
