--- a/storage/themes/riddelphotographers/assets/scss/_header.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_header.scss
@@ -385,7 +385,8 @@
 			&.active {
 				color: $primary-color;
 				
-				&:hover {
+				&:hover,
+				&:focus {
 					color: $anchor-color-hover;
 				}
 
