--- a/storage/themes/riddelphotographers/assets/scss/_settings.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_settings.scss
@@ -413,7 +413,7 @@ $menu-expand-max: 6;
 // --------------
 
 $offcanvas-size: 80%;
-$offcanvas-background: $primary-color;
+$offcanvas-background: $primary-color-90-lighter;
 $offcanvas-zindex: 9999;
 $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
