changed off-canvas menu link colour

--- a/storage/themes/riddelphotographers/assets/css/app.css
+++ b/storage/themes/riddelphotographers/assets/css/app.css
@@ -2673,7 +2673,7 @@ select:focus {
   font-weight: 300;
   font-style: normal;
   font-size: 3rem;
-  color: #fefefe;
+  color: #425868;
   text-transform: capitalize;
   display: table;
   white-space: nowrap; }
