--- a/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
@@ -127,7 +127,7 @@
 		font-weight: 300;
 		font-style: normal;
 		font-size: header-size(medium, h1);
-		color: $white;
+		color: $primary-color;
 		text-transform: capitalize;
 		display: table;
 		white-space: nowrap;
