--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -290,15 +290,11 @@
 
 .login {
 	overflow-x: hidden;
-	// height: auto;
-	// position: relative;
-	background: url(#{$asset-path}/images/login-page.jpg) center no-repeat;
-	background-size: cover;
 }
 
 .login-form {
 	margin: rem-calc(60 0);
-	background-color: rgba($white, 0.7);
+	background-color: $primary-color-90-lighter;
 	padding: rem-calc($grid-column-gutter / 2);
 	text-align: center;
 	position: relative;
