added title attribute

--- a/storage/themes/riddelphotographers/partials/main-footer.html
+++ b/storage/themes/riddelphotographers/partials/main-footer.html
@@ -4,7 +4,7 @@
                     <koken:navigation group="footer" class="menu" />
                 </nav>
                 <div class="scroll-up-container">
-                    <a class="scroll-up" href="#top">
+                    <a class="scroll-up" href="#top" title="Scroll Up">
                         <svg class="icon icon-scroll-down"><use xlink:href="#icon-scroll-down"></use></svg>
                     </a>
                 </div>
