--- a/storage/themes/riddelphotographers/partials/main-header.html
+++ b/storage/themes/riddelphotographers/partials/main-header.html
@@ -35,7 +35,7 @@
                             </koken:link>
                             <koken:include file="partials/navigation.html" />
                             <div class="scroll-down-container">
-                                <a class="scroll-down" href="#Weddings">
+                                <a class="scroll-down" href="#Weddings" title="Scroll Down">
                                     <svg class="icon icon-scroll-down"><use xlink:href="#icon-scroll-down"></use></svg>
                                 </a>
                             </div>
