added copyright glyph and dynamic year

--- a/storage/themes/riddelphotographers/partials/main-footer.html
+++ b/storage/themes/riddelphotographers/partials/main-footer.html
@@ -1,5 +1,5 @@
             <footer class="main-footer" itemscope itemtype="http://schema.org/WPFooter">
-                <p>{{ site.copyright }}</p>
+                <p>&copy;&nbsp;{{ year }}&nbsp;{{ site.copyright }}</p>
                 <nav class="footer-nav">
                     <koken:navigation group="footer" class="menu" />
                 </nav>
