--- a/storage/themes/riddelphotographers/assets/scss/app.scss
+++ b/storage/themes/riddelphotographers/assets/scss/app.scss
@@ -20,7 +20,7 @@
 // @include foundation-breadcrumbs;
 // @include foundation-button-group;
 // @include foundation-callout;
-// @include foundation-close-button;
+@include foundation-close-button;
 // @include foundation-drilldown-menu;
 // @include foundation-dropdown;
 // @include foundation-dropdown-menu;
@@ -34,7 +34,7 @@
 // @include foundation-progress-bar;
 // @include foundation-slider;
 // @include foundation-sticky;
-// @include foundation-reveal;
+@include foundation-reveal;
 // @include foundation-switch;
 // @include foundation-table;
 // @include foundation-tabs;
