changed close button styles [deploy:production]

--- a/storage/themes/riddelphotographers/assets/scss/_settings.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_settings.scss
@@ -305,8 +305,8 @@ $closebutton-offset-horizontal: 1rem;
 $closebutton-offset-vertical: 0.5rem;
 $closebutton-size: 2em;
 $closebutton-lineheight: 1;
-$closebutton-color: $dark-gray;
-$closebutton-color-hover: $black;
+$closebutton-color: $anchor-color;
+$closebutton-color-hover: $anchor-color-hover;
 
 // 15. Drilldown
 // -------------
