--- a/storage/themes/riddelphotographers/partials/login-header.html
+++ b/storage/themes/riddelphotographers/partials/login-header.html
@@ -4,15 +4,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="{{ location.theme_path }}/assets/images/favicon.ico" type="image/x-icon">
-		<link rel="apple-touch-icon" href="{{ location.theme_path }}/assets/images/apple-touch-icon.png">
-		<link rel="apple-touch-icon" sizes="57x57" href="{{ location.theme_path }}/assets/images/apple-touch-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="{{ location.theme_path }}/assets/images/apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="{{ location.theme_path }}/assets/images/apple-touch-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="{{ location.theme_path }}/assets/images/apple-touch-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="{{ location.theme_path }}/assets/images/apple-touch-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="{{ location.theme_path }}/assets/images/apple-touch-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="{{ location.theme_path }}/assets/images/apple-touch-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="{{ location.theme_path }}/assets/images/apple-touch-icon-180x180.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ location.theme_path }}/assets/images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="{{ location.theme_path }}/assets/images/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="{{ location.theme_path }}/assets/images/manifest.json">
+        <link rel="mask-icon" href="{{ location.theme_path }}/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="theme-color" content="#ffffff">
 		<koken:meta />
 		<koken:title />
 		<koken:asset file="assets/css/app.css" />
