--- a/storage/themes/riddelphotographers/assets/scss/_header.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_header.scss
@@ -70,50 +70,10 @@
 
 }
 
-.main-header .menu {
+@for $i from 1 through 10 {
 
-	> li {
-
-		&:nth-child(1) {
-			animation-delay: 1s;
-		}
-
-		&:nth-child(2) {
-			animation-delay: 1.25s;
-		}
-
-		&:nth-child(3) {
-			animation-delay: 1.5s;
-		}
-
-		&:nth-child(4) {
-			animation-delay: 1.75s;
-		}
-
-		&:nth-child(5) {
-			animation-delay: 2s;
-		}
-
-		&:nth-child(6) {
-			animation-delay: 2.25s;
-		}
-
-		&:nth-child(7) {
-			animation-delay: 2.5s;
-		}
-
-		&:nth-child(8) {
-			animation-delay: 2.75s;
-		}
-
-		&:nth-child(9) {
-			animation-delay: 3s;
-		}
-
-		&:nth-child(10) {
-			animation-delay: 3.25s;
-		}
-
+	.main-header .menu > li:nth-child(#{$i}) {
+		animation-delay:(#{0.75s + $i * 0.25s});
 	}
 
 }
