--- a/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
@@ -81,42 +81,10 @@
 
 	&.active {
 
-		> li {
+		@for $i from 1 through 10 {
 
-			&:nth-child(2) {
-				animation-delay: 0.25s;
-			}
-
-			&:nth-child(3) {
-				animation-delay: 0.5s;
-			}
-
-			&:nth-child(4) {
-				animation-delay: 0.75s;
-			}
-
-			&:nth-child(5) {
-				animation-delay: 1s;
-			}
-
-			&:nth-child(6) {
-				animation-delay: 1.25s;
-			}
-
-			&:nth-child(7) {
-				animation-delay: 1.5s;
-			}
-
-			&:nth-child(8) {
-				animation-delay: 1.75s;
-			}
-
-			&:nth-child(9) {
-				animation-delay: 2s;
-			}
-
-			&:nth-child(10) {
-				animation-delay: 2.25s;
+			> li:nth-child(#{$i}) {
+				animation-delay:(#{-0.25s + $i * 0.25s});
 			}
 
 		}
