experimenting with colorify

--- a/storage/themes/riddelphotographers/assets/scss/app.scss
+++ b/storage/themes/riddelphotographers/assets/scss/app.scss
@@ -46,6 +46,8 @@
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
+@import 'colorify';
+
 @import 'animations';
 @import 'slick';
 @import 'slick-theme';
