--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -145,14 +145,11 @@
 .split-boxes {
 	@include clearfix;
 	margin-top: rem-calc(75);
-}
-
-.row-split {
-	max-width: ($global-width / 2 - rem-calc($grid-column-gutter));
-	width: 100%;
+	display: flex;
+	flex-direction: row;
 
 	@include breakpoint(small only) {
-		max-width: $global-width;
+		flex-direction: column;
 	}
 
 }
@@ -168,18 +165,6 @@
 
 	@include breakpoint(small only) {
 		height: auto;
-	}
-
-	.row-split {
-		float: right;
-	}
-
-}
-
-.split-box-right {
-
-	.row-split {
-		float: left;
 	}
 
 }
