--- a/storage/themes/riddelphotographers/assets/scss/_home-page.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_home-page.scss
@@ -43,7 +43,7 @@
 	h2 {
 		color: $black;
 		@include vertical-center;
-		right: $grid-column-gutter;
+		right: rem-calc(map-deep-get($grid-column-gutter, 'medium'));
 		margin: 0;
 
 		@include breakpoint(small only) {
