--- a/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
@@ -4,7 +4,7 @@
 	transition: 0.1s transform linear;
 	position: absolute;
 	top: rem-calc(32);
-	right: rem-calc($grid-column-gutter / 2);
+	right: rem-calc(map-deep-get($grid-column-gutter, 'medium') / 2);
 	height: rem-calc(43);
 	width: rem-calc(43);
 	z-index: 99999;
