--- a/storage/themes/riddelphotographers/assets/css/app.css
+++ b/storage/themes/riddelphotographers/assets/css/app.css
@@ -3240,7 +3240,8 @@ select:focus {
   z-index: 99999;
   outline: 0;
   padding: 0;
-  border: 0; }
+  border: 0;
+  cursor: pointer; }
 
 .bar, .bar::before, .bar::after {
   -webkit-transition: 0.2s background linear 0.1s, 0.2s top linear 0.2s, 0.2s -webkit-transform linear;
