--- a/storage/themes/riddelphotographers/partials/navigation.html
+++ b/storage/themes/riddelphotographers/partials/navigation.html
@@ -1,3 +1,3 @@
-<nav class="main-nav">
-	<koken:navigation class="menu" itemscope itemtype="http://schema.org/SiteNavigationElement" />
+<nav class="main-nav" itemscope itemtype="http://schema.org/SiteNavigationElement">
+	<koken:navigation class="menu" />
 </nav>
