--- a/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_main-styles.scss
@@ -38,6 +38,14 @@ button {
 
 }
 
+button,
+input,
+optgroup,
+select,
+textarea {
+	font-family: $body-font-family;
+}
+
 svg {
 	vertical-align: middle;
 }
