--- a/storage/themes/riddelphotographers/assets/scss/_settings.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_settings.scss
@@ -383,7 +383,7 @@ $input-background-disabled: $light-gray;
 $input-border: 1px solid $primary-color-50-lighter;
 $input-border-focus: 1px solid $secondary-color;
 $input-shadow: inset 0 1px 2px rgba($primary-color, 0.1);
-$input-shadow-focus: 0;
+$input-shadow-focus: inset 0px 0px 0px rgba($primary-color, 0.1);
 $input-cursor-disabled: not-allowed;
 $input-transition: box-shadow $transition-time, border-color ($transition-time / 2) ease-in-out;
 $input-number-spinners: true;
