--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -241,3 +241,7 @@
   		linear-gradient(to right, rgba($black, 0.3) 0%, rgba($black, 0.3) 100%);
   	position: absolute;
 }
+
+.reveal {
+	outline: none;
+}
