removed padding on row for submit button on contact page

--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -206,7 +206,8 @@
 }
 
 .column-collapse,
-.columns-collapse {
+.columns-collapse,
+.k-contact-form-submit.row {
 	padding-left: 0;
 	padding-right: 0;
 }
