--- a/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_page-styles.scss
@@ -253,6 +253,12 @@
 
 }
 
+.reveal {
+	outline: none;
+}
+
+// error page
+
 .bg-overlay {
 	width: 100%;
 	height: 100%;
@@ -260,10 +266,16 @@
 	top: 0;
 	z-index: -999;
 	background:
-  		linear-gradient(to right, rgba($black, 0.3) 0%, rgba($black, 0.3) 100%);
+  		linear-gradient(to right, rgba($black, 0.7) 0%, rgba($black, 0.8) 100%);
   	position: absolute;
 }
 
-.reveal {
-	outline: none;
+body.k-lens-error {
+	@include full-bg-img;
+	background-image: url(#{$asset-path}/images/error-page-bg.jpg);
+
+	.login-form {
+		background-color: rgba($white, 0.7);
+	}
+
 }
