--- a/storage/themes/riddelphotographers/partials/album-slider.html
+++ b/storage/themes/riddelphotographers/partials/album-slider.html
@@ -1,14 +1,14 @@
 <div class="gallery-main">
-<koken:load source="set" filter:id="{{ album.id }}">
-	<koken:loop>
-		<section class="gallery-item">
-			<koken:link title="View {{ album.title }}" class="grid-overlay-link">
-				<koken:img />
-				<div class="grid-overlay">
-					<h3 itemprop="headline">{{ album.title }}</h3>
-				</div>
-			</koken:link>
-		</section>
-	</koken:loop>
-</koken:load>
+	<koken:load source="set" filter:id="{{ album.id }}">
+		<koken:loop>
+			<div class="gallery-item">
+				<koken:link title="View {{ album.title }}" class="grid-overlay-link">
+					<koken:img />
+					<div class="grid-overlay">
+						<h3 itemprop="headline">{{ album.title }}</h3>
+					</div>
+				</koken:link>
+			</div>
+		</koken:loop>
+	</koken:load>
 </div>
