--- a/storage/themes/riddelphotographers/partials/login-header.html
+++ b/storage/themes/riddelphotographers/partials/login-header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+  	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="{{ location.theme_path }}/assets/images/favicon.ico" type="image/x-icon">
@@ -14,11 +14,30 @@
 		<koken:meta />
 		<koken:title />
 		<koken:asset file="assets/css/app.css" />
+		<!-- <koken:settings /> -->
 	</head>
-	<body class="login">
+	<body class="login" itemscope itemtype="http://schema.org/WebPage">
 		<koken:include file="partials/svg.html" />
-		<header class="login-header">
-			<koken:link to="front" title="{{ labels.home.singular }}" class="logo-link">
-				<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
-			</koken:link>
-		</header>
+		<!--[if lte IE 9]><p class="old-browser-notice">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> to experience this site.</p><![endif]-->
+		<div id="top" class="off-canvas-wrapper animsition">
+			<div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
+				<koken:include file="partials/side-navigation.html" />
+				<div class="off-canvas-content" data-off-canvas-content>
+					<header class="main-page-header" itemscope itemtype="http://schema.org/WPHeader">
+						<div class="top-navigation">
+							<div class="top-navigation-left">
+								<koken:link to="front" title="{{ labels.home.singular }}" class="logo-link">
+									<h1 itemprop="headline">
+										<span class="visual-hide">{{ site.title }}</span>
+										<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
+									</h1>
+								</koken:link>
+							</div>
+							<div class="top-navigation-right">
+								<koken:include file="partials/navigation.html" />
+							</div>
+						</div>
+						<button class="hamburger" type="button" data-toggle="offCanvasRight">
+							<span class="bar"></span>
+						</button>
+					</header>
