added tags for accessibility

--- a/storage/themes/riddelphotographers/partials/coming-soon-header.html
+++ b/storage/themes/riddelphotographers/partials/coming-soon-header.html
@@ -17,6 +17,8 @@
 	</head>
 	<body class="login">
 		<koken:include file="partials/svg.html" />
+		<!--[if lte IE 9]><p class="old-browser-notice">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> to experience this site.</p><![endif]-->
+		<noscript><h1>To access all of the features of this website, please enable JavaScript in your browser. Thank you.</h1></noscript>
 		<header class="login-header">
 			<a data-open="loginForm" class="logo-link">
 				<koken:asset file="assets/images/logo.png" class="main-logo" alt="{{ site.title }}" width="1434" height="676" />
