improvements for the error page

--- a/storage/themes/riddelphotographers/assets/scss/_mixins.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_mixins.scss
@@ -21,7 +21,9 @@
 
 @mixin full-bg-img {
 	background-size: cover;
-	background-position: center;
+	background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 @mixin full-width-height {
