--- a/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
@@ -33,6 +33,14 @@
 		left: 0;
 	}
 
+	.login & {
+			&,
+			&::before,
+			&::after {
+				background: $primary-color-50-lighter;
+			}
+	}
+
 	& {
 		margin-top: rem-calc(-3);
 	}
