--- a/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
+++ b/storage/themes/riddelphotographers/assets/scss/_off-canvas-menu.scss
@@ -34,11 +34,13 @@
 	}
 
 	.login & {
-			&,
-			&::before,
-			&::after {
-				background: $primary-color-50-lighter;
-			}
+
+		&,
+		&::before,
+		&::after {
+			background: $primary-color-50-lighter;
+		}
+
 	}
 
 	& {
@@ -131,7 +133,8 @@
 		}
 
 		&.k-nav-current,
-		&:hover {
+		&:hover,
+		&:focus {
 			color: $primary-color-50-lighter;
 		}
 
